compilateurDeca/src/test/deca/syntax/invalid/objet/dot_ident.deca
// Description:
//  Appel après '.' sans identifiant de méthode.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A { }
{
    A a;
    a = new A();
    a.(2);
}
